--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsd-icon",
+  "name": "fei-chang-niu-pi-de-icon",
   "version": "0.0.1",
   "description": "Icon automation workflow with Figma",
   "main": "dist/juuust-react-icon.cjs.js",
